commit 144 : $.ajax -> 공통처리 [사용자 및 로그인 섹션 (1)]

--- a/src/main/resources/templates/initialPassword.html
+++ b/src/main/resources/templates/initialPassword.html
@@ -110,20 +110,11 @@
                     const userName = $("#initialPasswordUserName").val()
                     const userEmail = $("#initialPasswordUserEmail").val()
 
-                    $.ajax({
-                        type: 'GET',
-                        url: `/front/api/initialPassword?userName=${userName}&userEmail=${userEmail}`,
-                        dataType: 'json',
-                        contentType: 'application/json',
-                        success: function (data) {
-                            Util.alert(data.message).then(() => {
-                                if(data.httpStatus === 200) window.location.href = '/login'
-                            })
-                        },
-                        error: function (xhr, status, error) {
-                            console.error('Error getting password:', error);
-                        }
-                    });
+                    Http.syncGet(`/front/api/initialPassword?userName=${userName}&userEmail=${userEmail}`).then((res) => {
+                        Util.alert(res.message).then(() => {
+                            if(res['httpStatus'] === 200) window.location.href = '/login'
+                        })
+                    })
                 });
 
             }
@@ -145,22 +136,12 @@
                     const userName = $("#searchUserIdUserName").val()
                     const userEmail = $("#searchUserIdUserEmail").val()
 
-                    $.ajax({
-                        type: 'GET',
-                        url: `/front/api/findUserId?userName=${userName}&userEmail=${userEmail}`,
-                        dataType: 'json',
-                        contentType: 'application/json',
-                        success: function (data) {
-                            Util.alert(data.message).then(() => {
-                                if(data.httpStatus === 200) window.location.href = '/login'
-                            })
-                        },
-                        error: function (xhr, status, error) {
-                            console.error('Error getting password:', error);
-                        }
-                    });
+                    Http.syncGet(`/front/api/findUserId?userName=${userName}&userEmail=${userEmail}`).then((res) => {
+                        Util.alert(res.message).then(() => {
+                            if(res['httpStatus'] === 200) window.location.href = '/login'
+                        })
+                    })
                 });
-
             }
         });
     });
