--- a/src/main/resources/templates/user/coupon.html
+++ b/src/main/resources/templates/user/coupon.html
@@ -232,25 +232,16 @@
             if(lst.length === 0) Util.alert('요청할 쿠폰을 선택해주세요.', 'w', 'w')
             else {
                 const obj = {'couponId': lst}
-                $.ajax({
-                    type: 'POST',
-                    url: `/api/coupon-request-all`,             // 리스트로된 쿠폰에 대해 모두 요청한다.
-                    dataType: 'json',
-                    data: JSON.stringify(obj),
-                    contentType: 'application/json',
-                    success: function (data) {
-                        if (data.httpStatus === 200) {
-                            Util.alert(`총 ${data.message}개의 쿠폰이 요청되었습니다.`).then(() => {
-                                window.location.href = '/user/coupon'
-                            })
-                        } else {
-                            Util.alert("쿠폰 요청에 실패했습니다.", 'w', 'w')
-                        }
-                    },
-                    error: function (xhr, status, error) {
-                        console.error('Error getting password:', error);
+
+                Http.post(`/api/coupon-request-all`, obj).then((res) => {
+                    if (res['httpStatus'] === 200) {
+                        Util.alert(`총 ${res.message}개의 쿠폰이 요청되었습니다.`).then(() => {
+                            window.location.href = '/user/coupon'
+                        })
+                    } else {
+                        Util.alert("쿠폰 요청에 실패했습니다.", 'w', 'w')
                     }
-                });
+                })
             }
         })
 
@@ -264,24 +255,17 @@
             if(lst.length === 0) Util.alert('삭제할 요청을 선택해주세요.', 'w', 'w')
             else {
                 const queryString = '?ids=' + lst.join('&ids=');
-                $.ajax({
-                    type: 'DELETE',
-                    url: `/api/coupon-delete-several${queryString}`,
-                    dataType: 'json',
-                    contentType: 'application/json',
-                    success: function (data) {
-                        if (data.httpStatus === 200) {
-                            Util.alert(`총 ${data.message}개를 삭제했습니다.`).then(() => {
-                                window.location.href = `/user/coupon`
-                            })
-                        } else {
-                            Util.alert("쿠폰 요청 삭제에 실패했습니다.", 'w', 'w')
-                        }
-                    },
-                    error: function (xhr, status, error) {
-                        console.error('Error getting password:', error);
+
+                Http.delete(`/api/coupon-delete-several${queryString}`).then((res) => {
+                    if (res['httpStatus'] === 200) {
+                        Util.alert(`총 ${res.message}개를 삭제했습니다.`).then(() => {
+                            window.location.href = `/user/coupon`
+                        })
+                    } else {
+                        Util.alert("쿠폰 요청 삭제에 실패했습니다.", 'w', 'w')
                     }
-                });
+
+                })
             }
         })
 
@@ -293,24 +277,15 @@
             const msg = (useAt === 'N') ? '해당 쿠폰은 아직 사용 전입니다. <br/> 해당 쿠폰을 삭제하시겠습니까?' : '해당 쿠폰을 삭제하시겠습니까?'
             Util.confirm(`${msg}`).then((isOk) => {
                 if(isOk) {
-                    $.ajax({
-                        type: 'DELETE',
-                        url: `/api/coupon-has/${couponHasId}`,
-                        dataType: 'json',
-                        contentType: 'application/json',
-                        success: function (data) {
-                            if(data.httpStatus === 200) {
-                                Util.alert(`${data.message}`).then(() => {
-                                    window.location.href = `/user/coupon`
-                                })
-                            }else {
-                                Util.alert("해당 쿠폰 삭제에 실패했습니다.", 'w', 'w')
-                            }
-                        },
-                        error: function (xhr, status, error) {
-                            console.error('Error getting password:', error);
+                    Http.delete(`/api/coupon-has/${couponHasId}`).then((res) => {
+                        if(res['httpStatus'] === 200) {
+                            Util.alert(`${res.message}`).then(() => {
+                                window.location.href = `/user/coupon`
+                            })
+                        }else {
+                            Util.alert("해당 쿠폰 삭제에 실패했습니다.", 'w', 'w')
                         }
-                    });
+                    })
                 }
             })
         })
